--- a/MCsim_RachelFIVSModel.Rmd
+++ b/MCsim_RachelFIVSModel.Rmd
@@ -71,7 +71,7 @@ i. Set important parameters for running the simulation:
 ```{r}
 # (a) n_sim
 # Definition: Number of simulations to run (also referred to as the number of bulk tanks in earlier code; i.e., 1 simulation unit = 1 lot of milk)
-n_sim <- 100 #can use any n_sim for testing code, but need to change to at least 10k when running experiments
+n_sim <- 10000 #can use any n_sim for testing code, but need to change to at least 10k when running experiments
 
 # (b) n_units 
 # Definition: Number of units per lot (currently, half gallon units) 
@@ -220,7 +220,7 @@ data$temp <- temps
 ```{r}
 for (i in 1:(n_sim * n_units * n_day)) {
   allele_index <-
-    which(spore_growth_import$STorAT == data$STorAT[i]) #Find row in growth parameter data that corresponds to allele sample
+    which(spore_growth_import$rpoBAT == data$STorAT[i]) #Find row in growth parameter data that corresponds to allele sample
   row <- data[i,]
   prev_row <- getPrevRow(data, row$lot_id, row$milk_unit, row$day)
   update <-
